--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,13 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+configurations {
+    compile.exclude group: "org.apache.httpcomponents", module: "httpclient"
+}
+
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "penna.kotarch"
         minSdkVersion 17
@@ -15,13 +19,17 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    useLibrary 'org.apache.http.legacy'
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -29,17 +37,26 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile ('com.google.http-client:google-http-client:1.21.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
 
     compile 'io.reactivex.rxjava2:rxkotlin:2.0.3'
 
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha5"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha5"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha5"
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha8"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha8"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha8"
 
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
+    implementation 'com.android.support:appcompat-v7:26+'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.21.0'
+    compile 'com.google.http-client:google-http-client-android:1.22.0'
+    compile 'com.google.http-client:google-http-client-jackson2:1.22.0'
+
+
 }
