--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,12 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
+        jackOptions {
+            enabled true
+        }
+
         applicationId "penna.kotarch"
-        minSdkVersion 17
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -23,7 +27,10 @@ android {
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -32,12 +39,14 @@ android {
     }
 }
 
+def s = "26.0.1"
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile ('com.google.http-client:google-http-client:1.21.0') {
+    compile('com.google.http-client:google-http-client:1.21.0') {
         exclude group: 'org.apache.httpcomponents'
     }
 
@@ -45,16 +54,38 @@ dependencies {
 
     compile "android.arch.lifecycle:runtime:1.0.0-alpha8"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha8"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha8"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha8"
+    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha8"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    kapt "android.arch.persistence.room:compiler:1.0.0-alpha8"
+    kapt "android.arch.lifecycle:compiler:1.0.0-alpha8"
+
+    compile "com.android.support:recyclerview-v7:$s"
+    compile "com.android.support:cardview-v7:$s"
+
+    compile "org.jetbrains.anko:anko-commons:0.10.1"
+
+    compile 'com.github.piasy:rxandroidaudio:1.5.2'
+    compile 'com.github.piasy:AudioProcessor:1.5.2'
+
+    compile 'com.jakewharton.rxbinding2:rxbinding-kotlin:+'
+    compile 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:+'
+    compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:+'
+    compile 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:+'
+
+
 
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26+'
+    implementation "com.android.support:appcompat-v7:$s"
+
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.21.0'
+
     compile 'com.google.http-client:google-http-client-android:1.22.0'
     compile 'com.google.http-client:google-http-client-jackson2:1.22.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
