--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,29 @@
     package="penna.kotarch">
 
     <application
+        android:name=".YtApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activities.MainActivity" />
+        <activity android:name=".ui.activities.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".ui.services.MyService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".ui.services.PlayService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
