--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 configurations {
     compile.exclude group: "org.apache.httpcomponents", module: "httpclient"
 }
@@ -15,7 +17,7 @@ android {
         jackOptions {
             enabled true
         }
-
+        multiDexEnabled true
         applicationId "penna.kotarch"
         minSdkVersion 23
         targetSdkVersion 26
@@ -26,10 +28,6 @@ android {
     useLibrary 'org.apache.http.legacy'
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -46,51 +44,51 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile('com.google.http-client:google-http-client:1.21.0') {
+    implementation('com.google.http-client:google-http-client:1.21.0') {
         exclude group: 'org.apache.httpcomponents'
     }
 
-    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 
-    compile "android.arch.lifecycle:runtime:1.0.3"
-    compile "android.arch.lifecycle:extensions:1.0.0"
-    compile "android.arch.persistence.room:runtime:1.0.0"
-    compile "android.arch.persistence.room:rxjava2:1.0.0"
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+
+
+    implementation "android.arch.lifecycle:runtime:1.0.3"
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    implementation "android.arch.persistence.room:rxjava2:1.0.0"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     kapt "android.arch.persistence.room:compiler:1.0.0"
     kapt "android.arch.lifecycle:compiler:1.0.0"
 
-    compile "com.android.support:recyclerview-v7:$s"
-    compile "com.android.support:cardview-v7:$s"
+    implementation "com.android.support:recyclerview-v7:$s"
+    implementation "com.android.support:cardview-v7:$s"
 
-    compile 'com.github.ajalt:timberkt:1.3.0'
+    implementation 'com.github.ajalt:timberkt:1.3.0'
 
-    compile "org.jetbrains.anko:anko-commons:0.10.1"
-
-    compile 'com.github.piasy:rxandroidaudio:1.5.2'
-    compile 'com.github.piasy:AudioProcessor:1.5.2'
-
-    compile 'com.jakewharton.rxbinding2:rxbinding-kotlin:+'
-    compile 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:+'
-    compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:+'
-    compile 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:+'
+    implementation "org.jetbrains.anko:anko-commons:0.10.1"
 
 
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:+'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:+'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:+'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:+'
 
-    compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
+    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$s"
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.21.0'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev183-1.21.0'
 
-    compile 'com.google.http-client:google-http-client-android:1.22.0'
-    compile 'com.google.http-client:google-http-client-jackson2:1.22.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.google.http-client:google-http-client-android:1.22.0'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.22.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
 
 
 }
