--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,16 +11,13 @@ configurations {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
-        jackOptions {
-            enabled true
-        }
         multiDexEnabled true
         applicationId "penna.kotarch"
         minSdkVersion 23
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -37,7 +34,7 @@ android {
     }
 }
 
-def s = "26.1.0"
+def s = "27.0.2"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -63,13 +60,15 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.0.0"
     kapt "android.arch.lifecycle:compiler:1.0.0"
 
+    implementation "com.android.support:design:$s"
+
+    implementation 'com.devbrackets.android:exomedia:4.1.0'
     implementation "com.android.support:recyclerview-v7:$s"
     implementation "com.android.support:cardview-v7:$s"
 
     implementation 'com.github.ajalt:timberkt:1.3.0'
 
     implementation "org.jetbrains.anko:anko-commons:0.10.1"
-
 
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:+'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:+'
@@ -89,6 +88,8 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-android:1.22.0'
     implementation 'com.google.http-client:google-http-client-jackson2:1.22.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+
+    implementation 'com.android.support:multidex:1.0.2'
 
 
 }
