--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,15 @@ android {
     }
 }
 
-def s = "27.0.2"
+def supportLibVersion = "27.0.2"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
     implementation('com.google.http-client:google-http-client:1.21.0') {
         exclude group: 'org.apache.httpcomponents'
     }
@@ -51,34 +53,40 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
 
-    implementation "android.arch.lifecycle:runtime:1.0.3"
-    implementation "android.arch.lifecycle:extensions:1.0.0"
+    implementation "android.arch.lifecycle:runtime:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
     implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:2.2.1'
+
+
+
     kapt "android.arch.persistence.room:compiler:1.0.0"
     kapt "android.arch.lifecycle:compiler:1.0.0"
 
-    implementation "com.android.support:design:$s"
+    implementation "com.android.support:design:$supportLibVersion"
 
     implementation 'com.devbrackets.android:exomedia:4.1.0'
-    implementation "com.android.support:recyclerview-v7:$s"
-    implementation "com.android.support:cardview-v7:$s"
+    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "com.android.support:cardview-v7:$supportLibVersion"
 
     implementation 'com.github.ajalt:timberkt:1.3.0'
 
     implementation "org.jetbrains.anko:anko-commons:0.10.1"
 
-    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:+'
-    implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:+'
-    implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:+'
-    implementation 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:+'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:2.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:2.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:2.0.0'
 
     implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$s"
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
