--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,14 +66,14 @@ dependencies {
 
 
     kapt "android.arch.persistence.room:compiler:1.0.0"
-    kapt "android.arch.lifecycle:compiler:1.0.0"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
 
     implementation "com.android.support:design:$supportLibVersion"
 
     implementation 'com.devbrackets.android:exomedia:4.1.0'
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
     implementation "com.android.support:cardview-v7:$supportLibVersion"
-
+    implementation "com.android.support:palette-v7:$supportLibVersion"
     implementation 'com.github.ajalt:timberkt:1.3.0'
 
     implementation "org.jetbrains.anko:anko-commons:0.10.1"
@@ -98,6 +98,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
 
     implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    kapt 'com.github.bumptech.glide:compiler:4.5.0'
 
 
 }
