--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
     }
 }
 
+
+kapt {
+    useBuildCache = true
+}
+
 def supportLibVersion = "27.0.2"
 
 dependencies {
@@ -57,11 +62,12 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.0"
     implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:2.2.1'
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
 
 
@@ -100,6 +106,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.2'
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'androidx.core:core-ktx:0.1'
 
 
 }
