--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
             android:exported="true" />
         <service
             android:name=".ui.services.PlayService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".ui.activities.NowPlayingActivity"></activity>
     </application>
 
 </manifest>
